chore: pin tags in values for renovate

--- a/charts/mosquitto/Chart.yaml
+++ b/charts/mosquitto/Chart.yaml
@@ -30,4 +30,4 @@ annotations:
       url: https://mosquitto.org/
   artifacthub.io/images: |
     - name: mosquitto
-      image: eclipse-mosquitto:2.0.22
+      image: eclipse-mosquitto
