feat(mosquitto): add deployment strategy configuration
Add support for configuring the deployment strategy via values.yaml.
This is particularly useful when using persistence with ReadWriteOnce
access mode, where Recreate strategy is required to avoid deadlocks
during rolling updates (the new pod cannot mount the PVC while the
old pod still holds it).

--- a/charts/mosquitto/values.yaml
+++ b/charts/mosquitto/values.yaml
@@ -46,6 +46,15 @@ resources: {}
   #   cpu: 100m
   #   memory: 128Mi
 
+# -- Deployment strategy (use Recreate when using persistence with RWO access mode)
+strategy: {}
+  # type: Recreate
+  # -- or --
+  # type: RollingUpdate
+  # rollingUpdate:
+  #   maxSurge: 25%
+  #   maxUnavailable: 25%
+
 # Service configuration
 service:
   # -- Service type (ClusterIP/LoadBalancer/NodePort)
