--- a/charts/mosquitto/templates/deployment.yaml
+++ b/charts/mosquitto/templates/deployment.yaml
@@ -6,6 +6,10 @@ metadata:
     {{- include "mosquitto.labels" . | nindent 4 }}
 spec:
   replicas: 1
+  {{- with .Values.strategy }}
+  strategy:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
   selector:
     matchLabels:
       {{- include "mosquitto.selectorLabels" . | nindent 6 }}
