--- a/charts/mosquitto/templates/deployment.yaml
+++ b/charts/mosquitto/templates/deployment.yaml
@@ -6,6 +6,13 @@ metadata:
     {{- include "mosquitto.labels" . | nindent 4 }}
 spec:
   replicas: 1
+  {{- if .Values.strategy }}
+  strategy:
+    {{- toYaml .Values.strategy | nindent 4 }}
+  {{- else if .Values.persistence.enabled }}
+  strategy:
+    type: Recreate
+  {{- end }}
   selector:
     matchLabels:
       {{- include "mosquitto.selectorLabels" . | nindent 6 }}
