--- a/charts/music-assistant/templates/deployment.yaml
+++ b/charts/music-assistant/templates/deployment.yaml
@@ -6,8 +6,13 @@ metadata:
     {{- include "music-assistant.labels" . | nindent 4 }}
 spec:
   replicas: 1
+  {{- if .Values.strategy }}
+  strategy:
+    {{- toYaml .Values.strategy | nindent 4 }}
+  {{- else if .Values.persistence.enabled }}
   strategy:
     type: Recreate
+  {{- end }}
   selector:
     matchLabels:
       {{- include "music-assistant.selectorLabels" . | nindent 6 }}
