--- a/charts/mealie/templates/deployment.yaml
+++ b/charts/mealie/templates/deployment.yaml
@@ -1,4 +1,8 @@
+{{- $replicas := int (.Values.replicaCount | default 1) -}}
+{{- $accessModes := .Values.persistence.accessModes | default (list) -}}
+{{- $hasRWX := has "ReadWriteMany" $accessModes -}}
 {{ include "mealie.validate.replicas" . }}
+{{ include "mealie.validate.persistence.replicas" . }}
 {{ include "mealie.validate.sqlite.persistence" . }}
 {{ include "mealie.validate.database" . }}
 apiVersion: apps/v1
@@ -9,6 +13,13 @@ metadata:
     {{- include "mealie.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.replicaCount }}
+  {{- if .Values.strategy }}
+  strategy:
+    {{- toYaml .Values.strategy | nindent 4 }}
+  {{- else if and .Values.persistence.enabled (or (eq $replicas 1) (not $hasRWX)) }}
+  strategy:
+    type: Recreate
+  {{- end }}
   selector:
     matchLabels:
       {{- include "mealie.selectorLabels" . | nindent 6 }}
