--- a/charts/mealie/values.yaml
+++ b/charts/mealie/values.yaml
@@ -99,6 +99,13 @@ persistence:
   annotations: {}
     # k8up.io/backup: "true"
 
+# -- Deployment update strategy (default: Recreate when persistence enabled and non-RWX or single replica)
+strategy: {}
+  # type: RollingUpdate
+  # rollingUpdate:
+  #   maxSurge: 0
+  #   maxUnavailable: 1
+
 # Database configuration
 database:
   # -- Database engine to use (sqlite/postgres)
