--- a/charts/qbittorrent-vpn/templates/ingress.yaml
+++ b/charts/qbittorrent-vpn/templates/ingress.yaml
@@ -1,21 +1,21 @@
-{{- if .Values.ingress.enabled -}}
+{{- if .Values.qbittorrent.ingress.enabled -}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ include "qbittorrent-vpn.fullname" . }}
   labels:
     {{- include "qbittorrent-vpn.labels" . | nindent 4 }}
-  {{- with .Values.ingress.annotations }}
+  {{- with .Values.qbittorrent.ingress.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
-  {{- with .Values.ingress.className }}
+  {{- with .Values.qbittorrent.ingress.className }}
   ingressClassName: {{ . }}
   {{- end }}
-  {{- if .Values.ingress.tls }}
+  {{- if .Values.qbittorrent.ingress.tls }}
   tls:
-    {{- range .Values.ingress.tls }}
+    {{- range .Values.qbittorrent.ingress.tls }}
     - hosts:
         {{- range .hosts }}
         - {{ . | quote }}
@@ -24,7 +24,7 @@ spec:
     {{- end }}
   {{- end }}
   rules:
-    {{- range .Values.ingress.hosts }}
+    {{- range .Values.qbittorrent.ingress.hosts }}
     - host: {{ .host | quote }}
       http:
         paths:
@@ -37,7 +37,7 @@ spec:
               service:
                 name: {{ include "qbittorrent-vpn.fullname" $ }}
                 port:
-                  number: {{ $.Values.service.port }}
+                  number: {{ $.Values.qbittorrent.service.port }}
           {{- end }}
     {{- end }}
 {{- end }}
