--- a/charts/qbittorrent-vpn/tests/ingress_test.yaml
+++ b/charts/qbittorrent-vpn/tests/ingress_test.yaml
@@ -9,7 +9,7 @@ tests:
 
   - it: should create ingress when enabled
     set:
-      ingress.enabled: true
+      qbittorrent.ingress.enabled: true
     asserts:
       - hasDocuments:
           count: 1
@@ -21,8 +21,8 @@ tests:
 
   - it: should set ingress class name
     set:
-      ingress.enabled: true
-      ingress.className: nginx
+      qbittorrent.ingress.enabled: true
+      qbittorrent.ingress.className: nginx
     asserts:
       - equal:
           path: spec.ingressClassName
@@ -30,8 +30,8 @@ tests:
 
   - it: should apply ingress annotations
     set:
-      ingress.enabled: true
-      ingress.annotations:
+      qbittorrent.ingress.enabled: true
+      qbittorrent.ingress.annotations:
         kubernetes.io/ingress.class: nginx
         cert-manager.io/cluster-issuer: letsencrypt
     asserts:
@@ -44,8 +44,8 @@ tests:
 
   - it: should configure hosts
     set:
-      ingress.enabled: true
-      ingress.hosts:
+      qbittorrent.ingress.enabled: true
+      qbittorrent.ingress.hosts:
         - host: qbittorrent.example.com
           paths:
             - path: /
@@ -63,8 +63,8 @@ tests:
 
   - it: should configure multiple hosts
     set:
-      ingress.enabled: true
-      ingress.hosts:
+      qbittorrent.ingress.enabled: true
+      qbittorrent.ingress.hosts:
         - host: qbittorrent.example.com
           paths:
             - path: /
@@ -83,8 +83,8 @@ tests:
 
   - it: should configure TLS
     set:
-      ingress.enabled: true
-      ingress.tls:
+      qbittorrent.ingress.enabled: true
+      qbittorrent.ingress.tls:
         - secretName: qbittorrent-tls
           hosts:
             - qbittorrent.example.com
@@ -98,8 +98,8 @@ tests:
 
   - it: should use service port in backend
     set:
-      ingress.enabled: true
-      service.port: 9090
+      qbittorrent.ingress.enabled: true
+      qbittorrent.service.port: 9090
     asserts:
       - equal:
           path: spec.rules[0].http.paths[0].backend.service.port.number
