--- a/charts/qbittorrent-vpn/tests/service_test.yaml
+++ b/charts/qbittorrent-vpn/tests/service_test.yaml
@@ -25,7 +25,7 @@ tests:
 
   - it: should use custom service type
     set:
-      service.type: LoadBalancer
+      qbittorrent.service.type: LoadBalancer
     asserts:
       - equal:
           path: spec.type
@@ -33,7 +33,7 @@ tests:
 
   - it: should use custom port
     set:
-      service.port: 9090
+      qbittorrent.service.port: 9090
     asserts:
       - contains:
           path: spec.ports
