--- a/charts/qbittorrent-vpn/values.yaml
+++ b/charts/qbittorrent-vpn/values.yaml
@@ -180,6 +180,34 @@ qbittorrent:
   #   mountPath: "/etc/foo"
   #   readOnly: true
 
+  service:
+    # -- Service type.
+    type: ClusterIP
+    # -- Service port.
+    port: 8080
+
+  # Ingress configuration
+  ingress:
+    # -- Enable Ingress.
+    enabled: false
+    # -- Ingress class name.
+    className: ""
+    # -- Ingress annotations.
+    annotations: {}
+      # kubernetes.io/ingress.class: nginx
+      # kubernetes.io/tls-acme: "true"
+    # -- Ingress hosts.
+    hosts:
+      - host: qbittorrent.local
+        paths:
+          - path: /
+            pathType: ImplementationSpecific
+    # -- Ingress TLS configuration.
+    tls: []
+    #  - secretName: chart-example-tls
+    #    hosts:
+    #      - chart-example.local
+
 # VPN sidecar configuration
 gluetun:
   # -- Enable VPN sidecar.
@@ -306,33 +334,14 @@ gluetun:
     #   auth = "apikey"
     #   apikey = "your-api-key"
 
-service:
-  # -- Service type.
-  type: ClusterIP
-  # -- Service port.
-  port: 8080
-
-# Ingress configuration
-ingress:
-  # -- Enable Ingress.
-  enabled: false
-  # -- Ingress class name.
-  className: ""
-  # -- Ingress annotations.
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  # -- Ingress hosts.
-  hosts:
-    - host: qbittorrent.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
-  # -- Ingress TLS configuration.
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+  # Control server service configuration
+  service:
+    # -- Enable gluetun control server service.
+    enabled: false
+    # -- Service type.
+    type: ClusterIP
+    # -- Service port.
+    port: 8000
 
 # -- Additional init containers (run before gluetun if native sidecar mode).
 initContainers: []
