chore(qbittorrent-vpn): allow startupProbe, fix schema

--- a/charts/qbittorrent-vpn/templates/deployment.yaml
+++ b/charts/qbittorrent-vpn/templates/deployment.yaml
@@ -78,6 +78,10 @@ spec:
           ports:
             {{- toYaml . | nindent 12 }}
           {{- end }}
+         {{- with .Values.qbittorrent.startupProbe }}
+          startupProbe:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
           {{- with .Values.qbittorrent.livenessProbe }}
           livenessProbe:
             {{- toYaml . | nindent 12 }}
